[KULCU] Seller profile management implemented with JWT auth, MapStruct mapping, MongoDB city/district support, and auditing integration