@@ -1,13 +1,17 @@
 package com.berber_co.barber.security;
 
+import com.berber_co.barber.admin.security.CustomAdminDetailService;
+import com.berber_co.barber.enums.RoleType;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -22,6 +26,8 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtService jwtService;
     private final CustomUserDetailsService userDetailsService;
+    private final CustomSellerDetailService sellerDetailsService;
+    private final CustomAdminDetailService adminDetailsService;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
@@ -30,28 +36,35 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             throws ServletException, IOException {
 
         final String authHeader = request.getHeader("Authorization");
-        final String token;
-        final String username;
 
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
             filterChain.doFilter(request, response);
             return;
         }
 
-        token = authHeader.substring(7);
+        final String token = authHeader.substring(7);
+
         if (!jwtService.isTokenValid(token)) {
             filterChain.doFilter(request, response);
             return;
         }
 
-        username = jwtService.extractUsername(token);
+        final String username = jwtService.extractUsername(token);
+        final RoleType type = jwtService.extractRoleType(token);
 
         if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-            var userDetails = userDetailsService.loadUserByUsername(username);
+            UserDetails userDetails;
+
+            switch (type) {
+                case USER -> userDetails = userDetailsService.loadUserByUsername(username);
+                case BARBER -> userDetails = sellerDetailsService.loadUserByUsername(username);
+                case ADMIN -> userDetails = adminDetailsService.loadUserByUsername(username);
+                default -> throw new BadCredentialsException("Invalid role in token");
+            }
 
             List<SimpleGrantedAuthority> authorities = jwtService.extractRoles(token).stream()
                     .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                    .collect(Collectors.toList());
+                    .toList();
 
             var authToken = new UsernamePasswordAuthenticationToken(
                     userDetails,
@@ -59,7 +72,6 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                     authorities
             );
             authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-
             SecurityContextHolder.getContext().setAuthentication(authToken);
         }
 
